@@ -1,3 +1,8 @@
+2008-01-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/randomize.c: added previews for hurl,
+	pick, and slur.
+	
 2008-01-02  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/Makefile.am
